--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
 rabbitmq_version: 3.8
-# erlang 22.0 is available via epel so 3.8.8 is a maximum available version currently (https://www.rabbitmq.com/which-erlang.html)
-rabbitmq_version_specific: 3.8.8 
+# erlang >=23.2 =<24.2 is required for 3.8.32 (https://www.rabbitmq.com/which-erlang.html)
+rabbitmq_version_specific: 3.8.34
+
+rabbitmq_erlang_rpmurl: https://packages.erlang-solutions.com/erlang/rpm/centos/7/x86_64/erlang-23.3.1-1.el7.x86_64.rpm
 
 rabbitmq_repo_file: /etc/yum.repos.d/rabbitmq_rabbitmq-server.repo
 rabbitmq_repo_script_setup_url: https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh
